Align sum column correctly

--- a/va-virkailija/web/va/style/budgetedit.less
+++ b/va-virkailija/web/va/style/budgetedit.less
@@ -34,6 +34,9 @@
       .description-column {
         padding-left: 5px;
       }
+      tfoot .money.sum {
+        padding-top: 10px;
+      }
       span.money, span.soresu-money {
         margin-right: 0;
         display: inline-block;
